--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
-  "version": 2,
-
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.js"
+  "functions": {
+    "api/index.js": {
+      "runtime": "nodejs18.x"
     }
-  ]
+  }
 }
