--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb+srv://<user>:<password>@cluster.mongodb.net/shorturl
+MONGO_URI=mongodb+srv://backend:bfjlmnPeTTc26wJP@cluster0.siebl7k.mongodb.net/shorturl   
 JWT_SECRET=super_secret_key
 BASE_URL=http://localhost:5000
