fixed all issues

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 PORT=5000
+# use mongo db connection string
 MONGO_URI=mongodb+srv://backend:bfjlmnPeTTc26wJP@cluster0.siebl7k.mongodb.net/shorturl   
 JWT_SECRET=super_secret_key
 BASE_URL=http://localhost:5000
