complete full project

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 PORT=5000
-# use mongo db connection string
-MONGO_URI=mongodb+srv://backend:bfjlmnPeTTc26wJP@cluster0.siebl7k.mongodb.net/shorturl   
-JWT_SECRET=super_secret_key
+MONGO_URI=your_mongodb_connection_string 
+JWT_SECRET=super_secret_jwt_key_here
+JWT_EXPIRES_IN=
+BCRYPT_SALT_ROUNDS=
 BASE_URL=http://localhost:5000
+
